--- a/index.html
+++ b/index.html
@@ -4,23 +4,29 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>ToDoom</title>
+        <title>toDoom</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="style/style.css">
         <script src="https://kit.fontawesome.com/8346038149.js" crossorigin="anonymous"></script>
     </head>
     <body onload="pageLoad()">
-        <div class="container">
-            <h1 style="display: inline;">To Doom</h1>
-            <p style="display: inline;">&nbsp; YOUR #1 TO DO LIST</p>
-            <p>&nbsp</p>
-            <h6 style="display: inline-block;" onclick="filterDoneToDos()">To do's done: <span id="doneToDosCountField" class="badge badge-success"></span></h6>
-            <div class="jumbotron">
+        <!-- New task input -->
+        <div class="container-fluid toDoBar">
+            <div class="navLogo">
+                <h1>toDoom</h1>
+            </div>
+            <div class="addTaskDiv">
                 <form id=toDoInputForm>
-                    <input type="text" id="toDoInput" class="form-control" placeholder="Add new to do ...">
+                    <input type="text" id="toDoInput" class="form-control addTaskForm" placeholder="Add new to do ...">
                     <a type="submit" id="addToDoBTN" class="fas fa-plus-circle fa-lg" onclick="addToDo()"></a>
                 </form>
             </div>
+            <h6 class="toDoCount" onclick="filterDoneToDos()">To do's done: <span id="doneToDosCountField" class="badge badge-success"></span></h6>
+        </div>
+        </div>
+
+        <!-- To do overview-->
+        <div class="container">
             <div id="toDosList">
             </div>
             <div class="footer">
